--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- //fullCalendar// -->
+  <link href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.css' rel='stylesheet' />
+  <link href='https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.1/css/all.css' rel='stylesheet'>
+
+
+  <!-- <link href="./app/bill-page/fullCal-customCss.css" rel="stylesheet"> -->
 </head>
 
 <body class="mat-typography">
